Revision history for Verilog-Perl (aka Verilog::Language).

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!


* Verilog-Perl 3.481 devel

****  Fix t/03_spaces.t test for Debian (#1675). [Gregor Herrmann]

****  Fix GCC 11 false free-nonheap-obj warning.


* Verilog-Perl 3.480 2022-09-01

****  Fix vrename ignoring % (#1674). [Wenjun]


* Verilog-Perl 3.478 2021-06-06

****  Fix ${ENVVAR} expansion (#1671). [Henry Hsieh]


* Verilog-Perl 3.476 2021-04-13

****  Fix parameter type = struct. [Nathan Chrisman]


* Verilog-Perl 3.474 2020-10-29

****  Add filenames in vhier --xml cells.

****  Fix duplicates in vhier --includes. [Gregory Pierce]


* Verilog-Perl 3.472 2020-10-18

***   Add vhier --includes. [Gregory Pierce]

****  Add error on misused define (#1659). [Topa Tota]

****  Fix packages as enum base types, Verilator bug 2202. [Driss Hafdi]

****  Fix preprocessor stringify on undefined macro (#1668). [Martin Whitaker]


* Verilog-Perl 3.470 2020-01-06

****  Fix capital S for signed numbers, [Piotr Binkowski]

****  Fix // in filenames, #1610. [Peter Nelson]


* Verilog-Perl 3.468 2019-09-12

****  Support ${} for env vars in file lists, msg3065.

****  Fix multidimensional cell/interfaces, #1505. [Anderson Ignacio Da Silva]


* Verilog-Perl 3.466 2019-05-04

****  Fix Mac OS-X Perl 5.26.3 issues, #1428. [Jack Langsdorf]


* Verilog-Perl 3.464 2019-05-01

****  Fix vrename with escaped names, #1420. [Kerry Imming]


* Verilog-Perl 3.462 2019-04-09

***   Fix legacy $pin->netlist accessor.

***   Fix nettype declarations, msg2931.  [Andreas Sunardi]


* Verilog-Perl 3.460 2019-01-26

***   Fix Verilog::Std being empty on fork, #1394. [Corey Teffetalor]


* Verilog-Perl 3.458 2019-01-24

***   Add Verilog::Cell::range accessor, #1393. [Ed Carstens]

****  For write_verilog, print any cell parameters.


* Verilog-Perl 3.456 2018-10-28
