@@ -8,7 +8,7 @@
 use strict;
 use Test::More;
 
-BEGIN { plan tests => 26 }
+BEGIN { plan tests => 27 }
 BEGIN { require "./t/test_utils.pl"; }
 
 use Verilog::Language;
@@ -18,7 +18,8 @@ ok (Verilog::Language::is_keyword("input"));
 ok (!Verilog::Language::is_keyword("not_input"));
 ok (Verilog::Language::is_compdirect("`define"));
 
-is (Verilog::Language::language_standard(), '1800-2017');
+is (Verilog::Language::language_standard(), '1800-2023');
+is (Verilog::Language::language_standard('1800-2023'), '1800-2023');
 is (Verilog::Language::language_standard('1800-2017'), '1800-2017');
 is (Verilog::Language::language_standard('1800-2012'), '1800-2012');
 is (Verilog::Language::language_standard('1800-2009'), '1800-2009');
@@ -34,7 +35,7 @@ ok (Verilog::Language::is_keyword("generate"));
 is (Verilog::Language::language_standard(1995), '1364-1995');
 ok (!Verilog::Language::is_keyword("generate"));
 
-is (Verilog::Language::language_maximum(), '1800-2017', 'language_maximum');
+is (Verilog::Language::language_maximum(), '1800-2023', 'language_maximum');
 
 is (Verilog::Language::strip_comments("he/**/l/**/lo"), "hello");
 is (Verilog::Language::strip_comments("he//xx/*\nllo"), "he\nllo");
